--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -28,7 +28,7 @@
                         {% csrf_token %}
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Username" name="psw" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
                             <button class="btn btn-primary" type="submit">Login</button>
                             <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
                         </div>
@@ -41,7 +41,7 @@
 
     <!-- Page content -->
     <div class="container-fluid">
-            <h2>{{ course.name }}</h2>
+        <h2>{{ course.name }}</h2>
             <div class="card-columns-vertical">
                 {% for lesson in course.lesson_set.all %}
                     <div class="card mt-1">
@@ -53,50 +53,41 @@
             <!-- Task: show questions and choices -->
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
-
-            <!--
-
-            A collapse example here:
-            <div id="exam" class="collapse">
-                Click to expand elements within the collapse div
-                </div>
-
-            -->
-
-            <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
-            <!-- <HINT> Each example will have many questions -->
-
-            <!-- <HINT> Each question will have many choices -->
-
-
-            <!-- <HINT> Create a form to collect the selected choices for all questions -->
-            <!-- <HINT> For each question choice, you may create a checkbox input like
-            <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
-            -->
-
-            <!-- A choice submission form example
-            <form id="questionform" action="point to a submit view" method="post">
-                        ... for each question in the course ...
-                        <div class="card mt-1">
-                            <div class="card-header"><h5>{{ question.question_text}}</h5></div>
-                            {% csrf_token %}
-                            <div class="form-group">
-                               ... for each choice in the question ...
+            
+        <div id="exam" class="collapse">
+                <!-- <HINT> If user is authenticated, show course exam with a list of question -->
+            {% if user.is_authenticated %}
+                <form id="questionform" action="% url 'onlinecourse:submit' course.id %}" method="post">
+                    <!-- <HINT> Each example will have many questions -->
+                    {% for question in course.question_set.all %}
+                    <div class="card mt-1">
+                        <div class="card-header">
+                            <h5>{{question.title}}</h5>
+                        </div>
+                        {% csrf_token %}
+                        <b>{{question.text}}</b><br/>
+                        <div class="form-group">
+                            <!-- <HINT> Each question will have many choices -->
+                            {% for choice in question.choice_set.all %}
+                                <!-- <HINT> Create a form to collect the selected choices for all questions -->
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input type="checkbox" name="choice_{{choice.id}}"
-                                               class="form-check-input" id="{{choice.id}}"
-                                               value="{{choice.id}}">{{ choice.choice_text }}
+                                        <!-- <HINT> For each question choice, you may create a checkbox input like
+                                             <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
+                                             -->
+                                            <input type="checkbox" name="choice_{{choice.id}}"
+                                            class="form-check-input" id="{{choice.id}}"
+                                            value="{{choice.id}}">{{ choice.text }}
                                     </label>
                                 </div>
-                            </div>
+                            {% endfor %}
                         </div>
-                    <input class="btn btn-success btn-block" type="submit" value="Submit">
-            </form> -->
-
-            <!--Check here to see more details Bootstrap checkbox
-             https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
+                    </div>                        
+                    {% endfor %}
+                     <input class="btn btn-success btn-block" type="submit" value="Submit">
+                </form>       
+             {% endif %}
+        </div>
     </div>
 </body>
 </html>
