--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -54,10 +54,14 @@
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
             
-        <div id="exam" class="collapse show">
+       
                 <!-- <HINT> If user is authenticated, show course exam with a list of question -->
             {% if user.is_authenticated %}
-                <form id="questionform" action="% url 'onlinecourse:submit' course.id %}" method="post">
+
+            <input class="btn btn-info btn-block" data-toggle="collapse" data-target="#exam" type="button" value="Start Exam">
+            
+            <div id="exam" class="collapse">
+                <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
                     <!-- <HINT> Each example will have many questions -->
                     {% for question in course.question_set.all %}
                     <div class="card mt-1">
@@ -84,10 +88,11 @@
                         </div>
                     </div>                        
                     {% endfor %}
-                     <input class="btn btn-success btn-block" type="submit" value="Submit">
-                </form>       
-             {% endif %}
-        </div>
+                     <input class="btn btn-success btn-block" type="Submit" value="Submit">
+                </form> 
+            </div>      
+            {% endif %}
+       
     </div>
 </body>
 </html>
