--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -37,18 +37,42 @@
 
 <div class="container-fluid">
     {% if grade > 80 %}
-    <div class="alert alert-success">
-       <!--HINT Display passed info -->
-    </div>
-        {% else %}
+        <div class="alert alert-success">
+            <!--HINT Display passed info -->
+            <b>Congratulations, {{user.username}}!</b> 
+            You have Passed the exam and completed the course with score {{mark}}/{{total_mark}}
+      </div>
+    {% else %}
         <div class="alert alert-danger">
             <!--HINT Display failed info -->
+            <b>Failed</b> 
+            Sorry, {{user.username}}! You have Failed the exam the course with score {{mark}}/{{total_mark}}
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
+    {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+        <!--HINT Display exam results-->
+        {% for question in course.question_set.all %}
+            <div class="card">
+                <div class="card-header border-light">
+                    <h5>{{question.question_text}}</h5>
+                </div>
+                <div class="card-body">
+                    {% for choice in question.choice_set.all %}
+                        {% if choice.is_correct and choice in choices %}
+                        <p class="card-text" style="color:green">Correct answer: {{choice.choice}}</p>
+                        {% elif choice.is_correct and choice not in choices %}
+                        <p class="card-text" style="color:orange">Not selected: {{choice.choice}}</p>
+                        {% elif choice.is_correct == False and choice in choices %}
+                        <p class="card-text" style="color:red">Wrong answer: {{choice.choice}}</p>
+                        {% else %}
+                        <p class="card-text" style="color:black">{{choice.choice}}</p>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+        {% endfor %}
         </div>
     </div>
 </body>
